[fix] textarea css

--- a/task-management-app/src/components/atoms/TextArea/TextArea.module.css
+++ b/task-management-app/src/components/atoms/TextArea/TextArea.module.css
@@ -5,6 +5,7 @@
     overflow: 'auto';
     box-sizing: 'border-box'; */
     width: 100%;
+    padding: 5px;
     /* height: 100%;
     resize: none;
     overflow: auto; */
