--- a/task-management-app/src/components/atoms/CardFrame/CardFrame.module.css
+++ b/task-management-app/src/components/atoms/CardFrame/CardFrame.module.css
@@ -1,13 +1,13 @@
 .cardFrame {
     max-width: 275px;
     min-width: 275px;
-    min-height: 130px;
+    min-height: 150px;
     padding: 16px;
     box-sizing: border-box;
     margin-bottom: 10px;
     margin-right: 10px;
-    border: 1.5px solid #ddd;
-    border-radius: 18px;
+    border: 2px solid #ddd;
+    border-radius: 20px;
     background-color: #f8f8f8;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
     transition-property: background-color;
@@ -17,5 +17,5 @@
 }
 
 .cardFrame:hover {
-    background-color: #eceff0;
+    background-color: #d1e8f0;
 }
