--- a/task-management-app/src/components/atoms/CardFrame/CardFrame.module.css
+++ b/task-management-app/src/components/atoms/CardFrame/CardFrame.module.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     margin-bottom: 10px;
     margin-right: 10px;
-    border: 2px solid #ddd;
+    /* border: 2px solid #ddd; */
     border-radius: 20px;
     background-color: #f8f8f8;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
