--- a/task-management-app/src/components/atoms/Button/HazardButton.module.css
+++ b/task-management-app/src/components/atoms/Button/HazardButton.module.css
@@ -1,6 +1,6 @@
 .button {
-    background-color: rgb(217, 217, 217);
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 10px;
     font-size: 16px;
     border: none;
@@ -17,14 +17,6 @@
 }
 
 .button:hover {
-    background-color: #29b061;
-    color: white;
-}
-
-.dropdownButtonOpen {
-    background-color: #b97d29;
-    color: white;
-    max-height: 200px;
-    opacity: 1;
-    transform: rotate(90deg);
+    background-color: #ff0000;
+    color: rgb(0, 0, 0);
 }
