--- a/task-management-app/src/components/templates/KanbanBoard/KanbanBoard.module.css
+++ b/task-management-app/src/components/templates/KanbanBoard/KanbanBoard.module.css
@@ -1,3 +1,12 @@
+.title {
+    display: flex;
+    justify-content: center;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 5em;
+    color: #333333;
+    position: relative;
+}
+
 .addBoardButton {
     margin-left: 20px;
     margin-top: 20px;
